--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
 
 body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
@@ -10,8 +13,7 @@ h1 {
   padding: 0;
   font-size: 1.97rem;
   font-weight: 300;
-  line-height: 46px;
-  /* border: 1px solid green; */
+  line-height: 40px;
 }
 
 .profile {
@@ -32,8 +34,7 @@ article {
   display: flex;
   align-items: center;
   width: 100%;
-  min-height: 800px;
-  padding: 0 168px;
+  height: 784px;
 }
 
 .selected {
@@ -47,10 +48,11 @@ section {
 }
 
 section .content-text {
-  /* border: 1px solid red; */
   background-image: url(../images/pattern-quotes.svg);
   background-repeat: no-repeat;
   background-position-x: 90px;
+
+  margin-left: 160px;
   padding-top: 38px;
   width: 43%;
   z-index: 5;
@@ -58,7 +60,18 @@ section .content-text {
 
 section .content-image {
   background-image: url(../images/pattern-bg.svg);
-  margin-left: -130px;
-  padding: 64px 80px;
+  margin-left: -150px;
+  padding: 64px 90px;
   z-index: 0;
 }
+
+section .content-image img {
+  border-radius: 5px;
+}
+
+.attribution {
+  height: 16px;
+  font-size: 11px; text-align: center;
+}
+
+.attribution a { color: hsl(228, 45%, 44%); }
