--- a/css/m_style.css
+++ b/css/m_style.css
@@ -4,20 +4,33 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
   font-family: 'Inter', sans-serif;
   margin: 0;
   padding: 0;
+  width: 100vw;
+}
+
+article {
+  display: flex;
+  align-items: center;
+  margin: 0 50px;
+  width: 100%;
 }
 
 h1 {
-  padding: 0;
-  font-size: 1.97rem;
+  padding: 15px 12px;
+  font-size: 1.1rem;
   font-weight: 300;
-  line-height: 40px;
+  text-align: center;
+  margin-bottom: 0;
 }
 
 .profile {
-  font-size: 1.35em;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  font-size: 1.2em;
   margin: 0;
 }
 
@@ -30,16 +43,9 @@ h1 {
   color: hsl(240, 18%, 77%);
 }
 
-article {
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 784px;
-
-}
-
 .selected {
   display: flex;
+  flex-direction: column-reverse;
   align-items: center;
 }
 
@@ -50,17 +56,20 @@ section {
 section .content-text {
   background-image: url(../images/pattern-quotes.svg);
   background-repeat: no-repeat;
-  background-position-x: 90px;
-  margin-left: 160px;
-  padding-top: 38px;
-  width: 43%;
+  background-size: 80px;
+  background-position: center 20px;
+  padding-top: 15px;
   z-index: 5;
 }
 
 section .content-image {
+  text-align: center;
   background-image: url(../images/pattern-bg.svg);
-  margin-left: -150px;
-  padding: 60px 90px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  width: 100%;
+  padding: 20px;
   z-index: 0;
 }
 
@@ -68,11 +77,14 @@ section .content-image img {
   border-radius: 5px;
 }
 
-.content-image .navigation {
-  margin-top: -12px;
-  margin-left: 75px;
+section .content-image .profile-pic {
+  margin-top: 15px;
+  width: 300px;
 }
 
+.content-image .navigation {
+  margin-top: -12px;
+}
 .content-image .navigation a {
   text-decoration: none;
   background-color: white;
@@ -89,4 +101,7 @@ section .content-image img {
   border-bottom-right-radius: 50%;
 }
 
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution {
+  margin-top: 12px;
+  font-size: 9px;
+}
